# pedietcalc

./: Cargo.toml  README.md  index.html
src/: main.rs  styles.css
